@@ -40,6 +40,7 @@ import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Optional;
 import java.util.Set;
 import java.util.WeakHashMap;
 import java.util.concurrent.locks.Lock;
@@ -47,10 +48,11 @@ import java.util.concurrent.locks.ReadWriteLock;
 import java.util.concurrent.locks.ReentrantReadWriteLock;
 import java.util.stream.Stream;
 
-import jdk.internal.module.ServicesCatalog;
+import jdk.internal.misc.BuiltinClassLoader;
 import jdk.internal.misc.BootLoader;
-import sun.misc.JavaLangReflectModuleAccess;
-import sun.misc.SharedSecrets;
+import jdk.internal.misc.JavaLangReflectModuleAccess;
+import jdk.internal.misc.SharedSecrets;
+import jdk.internal.module.ServicesCatalog;
 import sun.reflect.CallerSensitive;
 import sun.reflect.Reflection;
 import sun.security.util.SecurityConstants;
@@ -106,20 +108,17 @@ public final class Module {
         this.loader = loader;
         this.descriptor = descriptor;
 
-        Set<String> packages = descriptor.packages();
-        this.packages = packages;
-
         // define module to VM
 
+        Set<String> packages = descriptor.packages();
         int n = packages.size();
         String[] array = new String[n];
         int i = 0;
         for (String pn : packages) {
             array[i++] = pn.replace('.', '/');
         }
-
         Version version = descriptor.version().orElse(null);
-        String vs = Objects.toString(version, "");
+        String vs = Objects.toString(version, null);
         String loc = Objects.toString(uri, null);
 
         defineModule0(this, vs, loc, array);
@@ -152,7 +151,6 @@ public final class Module {
         this.name = descriptor.name();
         this.loader = loader;
         this.descriptor = descriptor;
-        this.packages = descriptor.packages();
     }
 
 
@@ -588,9 +586,9 @@ public final class Module {
         if (!isNamed())
             return;
 
-        if (!packages.contains(pn)) {
-            throw new IllegalArgumentException("exported package " + pn +
-                " not in contents");
+        if (!containsPackage(pn)) {
+            throw new IllegalArgumentException("package " + pn
+                                               + " not in contents");
         }
 
         synchronized (this) {
@@ -642,12 +640,108 @@ public final class Module {
     }
 
 
+    // -- services --
+
+    // created lazily, additional service types that this module uses
+    private volatile WeakSet<Class<?>> transientUses;
+
+    /**
+     * If the caller's module is this module then update this module to add a
+     * service dependence on the given service type. This method is intended
+     * for use by frameworks that invoke {@link java.util.ServiceLoader
+     * ServiceLoader} on behalf of other modules or where the framework is
+     * passed a reference to the service type by other code.
+     *
+     * <p> This method does not trigger {@link java.lang.module.Configuration#bind
+     * service-binding}. </p>
+     *
+     * @apiNote As this method can only be used to update the caller's module
+     * then this method could be static and the IllegalStateException would
+     * not be needed.
+     *
+     * @return this module
+     *
+     * @throws IllegalStateException
+     *         If this is a named module and the caller is not this module
+     *
+     * @see #canUse(Class)
+     * @see ModuleDescriptor#uses()
+     */
+    @CallerSensitive
+    public Module addUses(Class<?> st) {
+        Objects.requireNonNull(st);
+
+        if (isNamed()) {
+
+            Module caller = Reflection.getCallerClass().getModule();
+            if (caller != this) {
+                throw new IllegalStateException(caller + " != " + this);
+            }
+
+            if (!canUse(st)) {
+                WeakSet<Class<?>> uses = this.transientUses;
+                if (uses == null) {
+                    synchronized (this) {
+                        uses = this.transientUses;
+                        if (uses == null) {
+                            uses = new WeakSet<>();
+                            this.transientUses = uses;
+                        }
+                    }
+                }
+                uses.add(st);
+            }
+
+        }
+
+        return this;
+    }
+
+    /**
+     * Indicates if this module has a service dependence on the given type.
+     *
+     * @return {@code true} if this module uses service type {@code st}
+     *
+     * @see #addUses(Class)
+     */
+    public boolean canUse(Class<?> st) {
+        Objects.requireNonNull(st);
+
+        if (!isNamed())
+            return true;
+
+        if (SharedSecrets.getJavaLangModuleAccess().isAutomatic(descriptor))
+            return true;
+
+        // uses was declared
+        if (descriptor.uses().contains(st.getName()))
+            return true;
+
+        // uses added via addUses
+        WeakSet<Class<?>> uses = this.transientUses;
+        if (uses != null && uses.contains(st))
+            return true;
+
+        return false;
+    }
+
+
 
     // -- packages --
 
-    // The set of packages in the module if this is a named module.
+    // Additional packages that are added to the module at run-time.
     // The field is volatile as it may be replaced at run-time
-    private volatile Set<String> packages;
+    private volatile Set<String> extraPackages;
+
+    private boolean containsPackage(String pn) {
+        if (descriptor.packages().contains(pn))
+            return true;
+        Set<String> extraPackages = this.extraPackages;
+        if (extraPackages != null && extraPackages.contains(pn))
+            return true;
+        return false;
+    }
+
 
     /**
      * Returns an array of the package names of the packages in this module.
@@ -657,9 +751,9 @@ public final class Module {
      * elements corresponding to packages added to the module after it was
      * created. </p>
      *
-     * <p> For unnamed modules, this method is the equivalent of invoking
-     * the {@link ClassLoader#getPackages() getPackages} method of this
-     * module's class loader and returning the array of package names. </p>
+     * <p> For unnamed modules, this method is the equivalent of invoking the
+     * {@link ClassLoader#getDefinedPackages() getDefinedPackages} method of
+     * this module's class loader and returning the array of package names. </p>
      *
      * <p> A package name appears at most once in the returned array. </p>
      *
@@ -670,7 +764,17 @@ public final class Module {
      */
     public String[] getPackages() {
         if (isNamed()) {
-            return packages.toArray(new String[0]);
+
+            Set<String> packages = descriptor.packages();
+            Set<String> extraPackages = this.extraPackages;
+            if (extraPackages == null) {
+                return packages.toArray(new String[0]);
+            } else {
+                return Stream.concat(packages.stream(),
+                                     extraPackages.stream())
+                        .toArray(String[]::new);
+            }
+
         } else {
             // unnamed module
             Stream<Package> packages;
@@ -715,11 +819,24 @@ public final class Module {
             throw new IllegalArgumentException("<unnamed> package not allowed");
 
         synchronized (this) {
-            // copy set
-            Set<String> pns = new HashSet<>(this.packages);
-            if (!pns.add(pn)) {
-                // already has this package
+
+            if (descriptor.packages().contains(pn)) {
+                // already in module
                 return;
+            }
+
+            Set<String> extraPackages = this.extraPackages;
+            if (extraPackages != null) {
+                if (extraPackages.contains(pn)) {
+                    // already added
+                    return;
+                }
+
+                // copy the set
+                extraPackages = new HashSet<>(extraPackages);
+                extraPackages.add(pn);
+            } else {
+                extraPackages = Collections.singleton(pn);
             }
 
             // update VM first, just in case it fails
@@ -727,7 +844,7 @@ public final class Module {
                 addPackage0(this, pn.replace('.', '/'));
 
             // replace with new set
-            this.packages = pns; // volatile write
+            this.extraPackages = extraPackages; // volatile write
         }
     }
 
@@ -775,12 +892,32 @@ public final class Module {
 
             // reads
             Set<Module> reads = new HashSet<>();
-            for (ModuleDescriptor other: cf.reads(descriptor)) {
+            for (ModuleDescriptor other : cf.reads(descriptor)) {
+                Module m2 = null;
+
+                // Search the configuration and parent layers for the module
+                // descriptor. This is temporary until Configuration defines
+                // an API to return the layer + name of the source rather than
+                // the module descriptor.
                 String dn = other.name();
-                Module m2 = modules.get(dn);
-                Layer parent = cf.layer();
-                if (m2 == null && parent != null)
-                    m2 = parent.findModule(other.name()).orElse(null);
+                Module candidate = modules.get(dn);
+                if (candidate != null && other.equals(candidate.getDescriptor())) {
+                    m2 = candidate;
+                } else {
+                    Layer parent = cf.layer();
+                    while (parent != null) {
+                        Optional<Module> om = parent.findModule(dn);
+                        if (om.isPresent()) {
+                            candidate = om.get();
+                            if (other.equals(candidate.getDescriptor())) {
+                                m2 = candidate;
+                                break;
+                            }
+                        }
+                        parent = parent.parent().orElse(null);
+                    }
+                }
+
                 if (m2 == null) {
                     throw new InternalError(descriptor.name() +
                             " reads unknown module: " + other.name());
@@ -869,34 +1006,51 @@ public final class Module {
      * invoking the {@link ClassLoader#getResourceAsStream(String)
      * getResourceAsStream} method on the class loader for this module.
      *
+     * @param  name
+     *         The resource name
+     *
      * @throws IOException
      *         If an I/O error occurs
+     *
+     * @see java.lang.module.ModuleReader#open(String)
      */
     public InputStream getResourceAsStream(String name) throws IOException {
         Objects.requireNonNull(name);
 
+        URL url = null;
+
         if (isNamed()) {
+            String mn = this.name;
+
+            // special-case built-in class loaders to avoid URL connection
             if (loader == null) {
-                return BootLoader.getResourceAsStream(this.name, name);
-            } else {
-                // use SharedSecrets to invoke protected method
-                return SharedSecrets.getJavaLangAccess()
-                        .getResourceAsStream(loader, this.name, name);
+                return BootLoader.findResourceAsStream(mn, name);
+            } else if (loader instanceof BuiltinClassLoader) {
+                return ((BuiltinClassLoader) loader).findResourceAsStream(mn, name);
             }
+
+            // use SharedSecrets to invoke protected method
+            url = SharedSecrets.getJavaLangAccess().findResource(loader, mn, name);
+
+        } else {
+
+            // unnamed module
+            if (loader == null) {
+                url = BootLoader.findResource(name);
+            } else {
+                return loader.getResourceAsStream(name);
+            }
+
         }
 
-        // unnamed module
-        URL url;
-        if (loader == null) {
-            url = BootLoader.findResource(name);
-        } else {
-            url = loader.getResource(name);
+        // fallthrough to URL case
+        if (url != null) {
+            try {
+                return url.openStream();
+            } catch (SecurityException e) { }
         }
-        try {
-            return url != null ? url.openStream() : null;
-        } catch (IOException e) {
-            return null;
-        }
+
+        return null;
     }
 
 
